[package]
name = "psyche-solana-coordinator"
version = "0.2.0"
description = "Psyche Solana Coordinator"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "psyche_solana_coordinator"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(target_os, values("solana"))',
  'cfg(feature, values("custom-heap", "custom-panic"))',
] }

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "a7a23eea308440a9fa9cb79cee7bddd30ab163d5" }
bytemuck = { version = "1", features = [
  "derive",
  "min_const_generics",
  "extern_crate_std",
] }
psyche-core = { path = "../../../../../shared/core" }
psyche-coordinator = { path = "../../../../../shared/coordinator" }
serde = { version = "1.0.209", features = ["derive"] }
psyche-solana-authorizer = { path = "../../../solana-authorizer/programs/solana-authorizer", features = [
  "cpi",
] }
ts-rs = { git = "https://github.com/arilotter/ts-rs.git", rev = "20c5bef07f3aa8ca3aa1b5cdad11ecdd60c64d34", features = [
  "psyche-impl",
] }
